--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ body, h1, h2, h3, h4{
 }
 .yellow-container {
     background-color: #fef700;
+    /* text-align: center; */
+    /* padding: 31px 21% 16px 21%; */
+}
+p {
+    font-family: 'Open Sans';
 }
 .navbar {
     padding-bottom: 11px;
@@ -24,7 +29,7 @@ body, h1, h2, h3, h4{
     background-color: #101820;
 }
 
-.main {
+.top {
     margin: 0 51px;
     padding: 80px 0 50px;
     display: flex;
@@ -36,11 +41,11 @@ body, h1, h2, h3, h4{
 .tagline-container{
     width: 41%;
     min-width: 305px;
-    
 }
 .sub-tagline {
     margin-top: 30px;
     font-family: 'Open Sans';
+    font-weight: 100;
 }
 .image{
     width: 35%;
@@ -57,7 +62,72 @@ body, h1, h2, h3, h4{
     /* font-weight: 100; */
     font-size: 39px;
 }
-
+.dark-container > .headline {
+    font-family: 'Open Sans';
+    color: #fef700;
+    text-align: center;
+}
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 16px;
+    justify-content: space-between;
+}
+.project {
+    width: 45%;
+    padding: 0 16px 10px 16px;
+}
+.headline {
+    font-family: 'Open Sans';
+    padding: 19px 0 21px 31px;
+}
+.subheadline {
+    font-family: 'Montserrat';
+    /* padding-top: 35px; */
+    font-size: 21px;
+}
+.play {
+    width: 24px;
+    margin-right: 12px;
+}
+.yt {
+    width: 25px;
+}
+.github {
+    width: 31px;
+}
+.svg {
+    margin-bottom: 10px;
+}
+.container {
+    padding-left: 32px;
+    padding-bottom: 41px;
+}
+.container > img {
+    margin: 16px 0;
+}
+.centered {
+    text-align: center;
+}
+.centered-headline {
+    color: #fef700;
+    font-family: "open sans";
+    padding-top: 26px;
+}
+.bottom > p {
+    max-width: 70%;
+    margin: 16px auto 0px auto;
+    padding-bottom: 30px;
+}
+.contact {
+    width: 31px;
+    margin: 0 10px 0 10px;
+}
+.footer-text {
+    font-family: 'open sans';
+    font-weight: 100;
+    color: #fef700;
+}
 @media screen and (max-width: 1096px) {
     .tagline {
       /* Apply some styles */
@@ -84,9 +154,20 @@ body, h1, h2, h3, h4{
       text-align: center;
       margin-top: 41px;
     }
+    .sub-tagline {
+        text-align: center;
+    }
     .image {
         margin-top: 21px;
         width: 10%;
+    }
+  }
+  @media screen and (max-width: 687px) {
+    .projects {
+        display: block;
+    }
+    .project {
+        width: 90%;
     }
   }
 
