--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ p {
     padding-bottom: 11px;
     box-shadow: 0 0 18px 0 #000000;
     position: fixed;
+    z-index: 5;
     width: 100%;
     background-color: #101820;
 }
@@ -34,9 +35,16 @@ p {
     padding: 80px 0 50px;
     display: flex;
     flex-wrap: wrap;
+    position: absolute;
     /* padding-left: 1px; */
     align-items: center;
     justify-content: center;
+}
+.tagline-container > h4 {
+    background-color: #101820;
+}
+.tagline-container > p {
+    background-color: #101820;
 }
 .tagline-container{
     width: 41%;
